--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,9 +1,8 @@
 @import "config";
-@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400700&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap");
 
 body {
-  font-family: "Source Code Pro", monospace;
+  font-family: "Noto Sans", sans-serif;
   color: #fff;
   background-color: #333;
 }
